--- a/public/index.html
+++ b/public/index.html
@@ -16,7 +16,7 @@
   -->
   <base href="/">
 
-  <!--<meta http-equiv="Content-Security-Policy" content="upgrade-insecure-requests"> -->
+  <meta http-equiv="Content-Security-Policy" content="upgrade-insecure-requests">
   <meta charset="UTF-8">
   <meta content="IE=Edge" http-equiv="X-UA-Compatible">
   <meta name="description" content="Spark Envision - Dias ( Web App )">
@@ -35,7 +35,7 @@
 
   <script>
     // The value below is injected by flutter build, do not touch.
-    var serviceWorkerVersion = '1668704247';
+    var serviceWorkerVersion = '451963230';
   </script>
   <style>
     .lds-roller {
