--- a/public/index.html
+++ b/public/index.html
@@ -16,7 +16,7 @@
   -->
   <base href="/">
 
-  <meta http-equiv="Content-Security-Policy" content="upgrade-insecure-requests">
+<!--  <meta http-equiv="Content-Security-Policy" content="upgrade-insecure-requests">-->
   <meta charset="UTF-8">
   <meta content="IE=Edge" http-equiv="X-UA-Compatible">
   <meta name="description" content="Spark Envision - Dias ( Web App )">
@@ -25,17 +25,17 @@
   <meta name="apple-mobile-web-app-capable" content="yes">
   <meta name="apple-mobile-web-app-status-bar-style" content="black">
   <meta name="apple-mobile-web-app-title" content="spark_dias_web">
-  <link rel="apple-touch-icon" href="icons/Icon-192.png">
+  <link rel="apple-touch-icon" href="icons/apple-touch-icon.png">
 
   <!-- Favicon -->
-  <link rel="icon" type="image/png" href="favicon.png"/>
+  <link rel="icon" type="image/x-icon" href="favicon.ico"/>
 
-  <title>spark_dias_web</title>
+  <title>Imdaad FM</title>
   <link rel="manifest" href="manifest.json">
 
   <script>
     // The value below is injected by flutter build, do not touch.
-    var serviceWorkerVersion = '451963230';
+    var serviceWorkerVersion = '3197096248';
   </script>
   <style>
     .lds-roller {
