--- a/public/index.html
+++ b/public/index.html
@@ -30,12 +30,12 @@
   <!-- Favicon -->
   <link rel="icon" type="image/x-icon" href="favicon.ico"/>
 
-  <title>Imdaad FM</title>
+  <title>FM-PRO (Dubai Traders)</title>
   <link rel="manifest" href="manifest.json">
 
   <script>
     // The value below is injected by flutter build, do not touch.
-    var serviceWorkerVersion = '3197096248';
+    var serviceWorkerVersion = '3039350306';
   </script>
   <style>
     .lds-roller {
